--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,7 +35,7 @@ jobs:
               sleep 1
             done
             echo Failed waiting for Postgres && exit 1
-      - run: go get
+      - run: GO111MODULE=on go get
       - run:
           command: sh ./build/migrate.sh
           environment:
