fix step push coveralls

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,5 +47,5 @@ jobs:
 
       - run:
           command: |
-            go get github.com/mattn/goveralls
+            GO111MODULE="on" go get github.com/mattn/goveralls
             goveralls -coverprofile=/tmp/coverage.out -service=circle-ci -repotoken=$COVERALLS_TOKEN
