--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,4 +47,5 @@ jobs:
 
       - run:
           command: |
+            GO111MODULE=off go get github.com/mattn/goveralls
             goveralls -coverprofile=/tmp/coverage.out -service=circle-ci -repotoken=$COVERALLS_TOKEN
