--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,8 +19,9 @@ jobs:
     #### expecting it in the form of
     ####   /go/src/github.com/circleci/go-tool
     ####   /go/src/bitbucket.org/circleci/go-tool
-    working_directory: github.com/vianhanif/todo-service
+    working_directory: /go/src/github.com/vianhanif/todo-service
     steps:
+      - checkout
 
       # specify any bash command here prefixed with `run: `
       - run:
