--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,9 @@
 # Golang CircleCI 2.0 configuration file
 #
 # Check https://circleci.com/docs/2.0/language-go/ for more details
-version: 2
+version: 2.1
+orbs:
+  codecov: codecov/codecov@1.0.5
 jobs:
   build:
     docker:
@@ -43,3 +45,5 @@ jobs:
           command: sh ./build/test.sh
           environment:
               TODO_DB: "dbname=sample host=127.0.0.1 sslmode=disable user=postgres"
+      - codecov/upload:
+          file: /tmp/coverage.out
